# flex-dns

./: Cargo.toml  LICENCE  Readme.md
.github/workflows/: rust.yml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: additional.rs  answer.rs  buffer.rs  characters.rs  header.rs  lib.rs  name.rs  name_servers.rs  parse.rs  question.rs  rdata.rs  write.rs
src/rdata/: a.rs  aaaa.rs  afsdb.rs  apl.rs  axfr.rs  caa.rs  cdnskey.rs  cds.rs  cert.rs  cname.rs  csync.rs  dhcid.rs  dlv.rs  dname.rs  dnskey.rs  ds.rs  eui48.rs  eui64.rs  hinfo.rs  hip.rs  https.rs  ipseckey.rs  ixfr.rs  key.rs  kx.rs  loc.rs  mx.rs  naptr.rs  ns.rs  nsec.rs  nsec3.rs  nsec3param.rs  openpgpkey.rs  opt.rs  ptr.rs  rp.rs  rrsig.rs  sig.rs  smimea.rs  soa.rs  (+10 more)
tests/: simple-dns.rs
