[package]
name = "flex-dns"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "A no alloc no std DNS parser and serializer written in Rust."
repository = "https://github.com/28Smiles/flex-dns"
documentation = "https://docs.rs/flex-dns"
readme = "README.md"
keywords = ["dns", "parser", "serializer", "no-alloc", "no-std"]

[features]
default = ["arrayvec", "heapless"]
vec = []

[dependencies]
arrayvec = { version = "0", default-features = false, optional = true }
heapless = { version = "0", default-features = false, optional = true }

[dev-dependencies]
simple-dns = "0"
